--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,6 @@ dependencies {
 
     implementation 'com.squareup.okhttp3:okhttp:4.2.1'
     implementation 'com.squareup.okio:okio:2.4.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
 
 }
