--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 
 
     implementation 'com.nex3z:flow-layout:1.3.0'
+    implementation 'com.nightonke:boommenu:2.1.1'
 
 
     implementation 'com.google.android.material:material:1.0.0'
