--- a/app/local.properties
+++ b/app/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Oct 07 21:00:05 CST 2019
-sdk.dir=C\:\\Users\\Administrator\\AppData\\Local\\Android\\Sdk
+#Sat Oct 19 14:49:26 CST 2019
+sdk.dir=C\:\\Users\\lenovo\\AppData\\Local\\Android\\sdk
