--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,14 @@
         android:theme="@style/AppTheme">
 
         <activity android:name=".SortPageNext"></activity>
-        <activity android:name=".sortpage"></activity>
+        <activity android:name=".SortPage"></activity>
 
         <activity
             android:name="com.liuguangqiang.ipicker.IPickerActivity"
             android:screenOrientation="portrait"
             android:theme="@style/IPickerTheme" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"></activity>
 
         <activity android:name=".MineActivity" >
 
