--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,40 +15,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
+
         <activity android:name=".SortPageNext"></activity>
         <activity android:name=".sortpage"></activity>
-<<<<<<< HEAD
+
         <activity
             android:name="com.liuguangqiang.ipicker.IPickerActivity"
             android:screenOrientation="portrait"
             android:theme="@style/IPickerTheme" />
 
-        <activity android:name=".MainActivity">
-=======
-        <activity android:name=".MineActivity" >
-=======
-        <activity android:name=".SortPageNext">
->>>>>>> 17e59519b70518cc36dfcd8e2648445ce94b7fbf
->>>>>>> 41320e113ce267359428627e3ac5326c1a281517
+        <activity android:name=".MainActivity"></activity>
 
-        <activity android:name=".SortPageNext"></activity>
-        <activity android:name=".sortpage">
->>>>>>> 36715cc90a7da4882601e5b1ae91abf25485a500
+        <activity android:name=".MineActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MineActivity" >
 
-        </activity>
-
-        <activity android:name=".MainActivity">
-        </activity>
     </application>
 
 </manifest>
