--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,52 +8,30 @@
 
     <application
         android:name=".MyApplication"
-        tools:replace="icon"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-<<<<<<< HEAD
-        <activity android:name=".HotWordActivity">
-
-        </activity>
-=======
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-        <activity android:name=".SortPageNext"></activity>
-        <activity android:name=".sortpage"></activity>
-<<<<<<< HEAD
+        android:theme="@style/AppTheme"
+        tools:replace="icon">
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:label="@string/title_activity_login"></activity>
+        <activity android:name=".HotWordActivity" />
+        <activity android:name=".SortPageNext" />
+        <activity android:name=".sortpage" />
         <activity
             android:name="com.liuguangqiang.ipicker.IPickerActivity"
             android:screenOrientation="portrait"
             android:theme="@style/IPickerTheme" />
-
->>>>>>> 99319a7f94ea2edf8111058bb70d636023717c10
+        <activity android:name=".MineActivity" />
         <activity android:name=".MainActivity">
-=======
-        <activity android:name=".MineActivity" >
-=======
-        <activity android:name=".SortPageNext">
->>>>>>> 17e59519b70518cc36dfcd8e2648445ce94b7fbf
->>>>>>> 41320e113ce267359428627e3ac5326c1a281517
-
-        <activity android:name=".SortPageNext"></activity>
-        <activity android:name=".sortpage">
->>>>>>> 36715cc90a7da4882601e5b1ae91abf25485a500
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".MineActivity" >
-
-        </activity>
-
-        <activity android:name=".MainActivity">
         </activity>
     </application>
 
