--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-<<<<<<< HEAD
-
     implementation 'com.nex3z:flow-layout:1.3.0'
     implementation 'com.nightonke:boommenu:2.1.1'
 
@@ -33,7 +31,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-=======
+
     implementation 'cn.gavinliu:ShapedImageView:0.8.6'
     implementation 'com.nex3z:flow-layout:1.3.0'
 
@@ -48,7 +46,9 @@ dependencies {
     implementation 'com.github.1em0nsOft:LemonBubble4Android:1.0.13'
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
->>>>>>> 99319a7f94ea2edf8111058bb70d636023717c10
+
+    implementation 'com.android.support:appcompat-v7:29.+'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
