--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,53 +8,29 @@
 
     <application
         android:name=".MyApplication"
-        tools:replace="icon"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-<<<<<<< HEAD
-
-=======
-<<<<<<< HEAD
-        <activity android:name=".HotWordActivity">
-
-        </activity>
-=======
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
->>>>>>> 89b0523e72ff4b89816a4ae731550f675710d4d8
-        <activity android:name=".SortPageNext"></activity>
-        <activity android:name=".SortPage"></activity>
-
-        <activity
-            android:name="com.liuguangqiang.ipicker.IPickerActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/IPickerTheme" />
-
-<<<<<<< HEAD
-        <activity android:name=".MainActivity"></activity>
-
-=======
->>>>>>> 99319a7f94ea2edf8111058bb70d636023717c10
-        <activity android:name=".MainActivity">
-=======
->>>>>>> 89b0523e72ff4b89816a4ae731550f675710d4d8
-        <activity android:name=".MineActivity" >
-
-
+        android:theme="@style/AppTheme"
+        tools:replace="icon">
+        <activity android:name=".IncreaseSort"></activity>
+        <activity android:name=".HotWordActivity" />
+        <activity android:name=".SortPageNext" />
+        <activity android:name=".SortPage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-
         </activity>
-
+        <activity
+            android:name="com.liuguangqiang.ipicker.IPickerActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/IPickerTheme" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".MineActivity" />
     </application>
 
 </manifest>
