--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,5 +78,5 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.2.1'
     implementation 'com.squareup.okio:okio:2.4.0'
     implementation 'de.hdodenhof:circleimageview:3.0.1'
-
+    implementation 'com.l4digital.fastscroll:fastscroll:2.0.1'
 }
