--- a/app/local.properties
+++ b/app/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Oct 19 16:20:29 CST 2019
+#Sat Nov 30 19:06:38 CST 2019
 >>>>>>>=99319a7f94ea2edf8111058bb70d636023717c10
-sdk.dir=C\:\\Users\\Administrator\\AppData\\Local\\Android\\Sdk
-<<<<<<<=HEAD
+sdk.dir=C\:\\Users\\lenovo\\AppData\\Local\\Android\\sdk
 =\=\=\=\=\=\=
+<<<<<<<=HEAD
