--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,95 +17,58 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-<<<<<<< HEAD
-        android:theme="@style/AppTheme"
-        tools:replace="icon">
-<<<<<<< HEAD
-        <activity android:name=".IncreaseSort"></activity>
-        <activity android:name=".HotWordActivity" />
-        <activity android:name=".SortPageNext" />
-        <activity android:name=".SortPage">
-=======
-=======
-<<<<<<< HEAD
+
         android:theme="@style/AppTheme" >
-=======
 
-        android:theme="@style/AppTheme">
->>>>>>> e5ab191e9798d1b2bffccdf6e750b8130373272a
 
+        <activity android:name=".IncreaseSort" > </activity>
         <activity android:name=".TestActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
 
-        <activity android:name=".SortPageNext" />
+        <activity android:name=".SortPageNext" >
 
-        <activity android:name=".HotWordActivity" ></activity>
+        </activity>
 
-        <activity android:name=".SortPage" />
+        <activity android:name=".HotWordActivity" >
 
-<<<<<<< HEAD
+        </activity>
+
+        <activity android:name=".SortPage" ><intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter></activity>
+
+
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login" />
-=======
-
-
->>>>>>> daac18980c649bbf9ac07d43f42a3e608d7a8a78
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login"></activity>
 
 
 
->>>>>>> e5ab191e9798d1b2bffccdf6e750b8130373272a
+
+
+
+
+
 
         <activity
             android:name="com.liuguangqiang.ipicker.IPickerActivity"
             android:screenOrientation="portrait"
             android:theme="@style/IPickerTheme" />
 
-<<<<<<< HEAD
+
         <activity android:name=".MineActivity" />
 
         <activity android:name=".MainActivity" ></activity>
-=======
-
-
-        <activity android:name=".MainActivity"></activity>
 
 
 
-        <activity android:name=".MineActivity">
 
 
-<<<<<<< HEAD
-        <activity android:name=".MainActivity" >
->>>>>>> 1e535d6d0eb4ffe5e6701d68776938a7b6c204a7
-=======
->>>>>>> daac18980c649bbf9ac07d43f42a3e608d7a8a78
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
 
-        </activity>
-<<<<<<< HEAD
-        <activity
-            android:name="com.liuguangqiang.ipicker.IPickerActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/IPickerTheme" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".MineActivity" />
-=======
 
->>>>>>> e5ab191e9798d1b2bffccdf6e750b8130373272a
->>>>>>> daac18980c649bbf9ac07d43f42a3e608d7a8a78
     </application>
 
 </manifest>
