--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,113 +17,28 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-<<<<<<< HEAD
         android:theme="@style/AppTheme"
-        tools:replace="icon">
-        <activity android:name=".IncreaseSort"></activity>
+        tools:replace="icon" >
         <activity android:name=".TestActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-=======
-<<<<<<< HEAD
-
-        android:theme="@style/AppTheme" >
-
-=======
-        android:theme="@style/AppTheme"
-        tools:replace="icon">
-        <activity android:name=".IncreaseSort">
-
->>>>>>> a8ac36ee20dd1b2572d5417117fdfa2a355e1ecd
         </activity>
->>>>>>> f0652ac41fb20acaf43114b88593837131f7c8a1
-
-        <activity android:name=".TestActivity" >
-
+        <activity android:name=".IncreaseSort" >
         </activity>
-
-<<<<<<< HEAD
-        <activity android:name=".SortPage" />
-
-<<<<<<< HEAD
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login" />
-
-=======
-
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login" />
-=======
         <activity android:name=".SortPageNext" >
->>>>>>> f0652ac41fb20acaf43114b88593837131f7c8a1
-
         </activity>
-
-<<<<<<< HEAD
-=======
-        <activity android:name=".HotWordActivity" >
->>>>>>> f0652ac41fb20acaf43114b88593837131f7c8a1
-
-        </activity>
-
-        <activity android:name=".SortPage" >
-
-<<<<<<< HEAD
-
-
-
-=======
-        </activity>
->>>>>>> f0652ac41fb20acaf43114b88593837131f7c8a1
->>>>>>> a8ac36ee20dd1b2572d5417117fdfa2a355e1ecd
-
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login" />
-
-<<<<<<< HEAD
-        <activity android:name=".MineActivity"></activity>
-
-=======
-<<<<<<< HEAD
-
+        <activity android:name=".HotWordActivity" />
+        <activity android:name=".SortPage" />
         <activity android:name=".MineActivity" />
-
-        <activity android:name=".MainActivity" ></activity>
-
-
-
-
-
-
-
-=======
-        <activity android:name=".MineActivity" />
-
->>>>>>> a8ac36ee20dd1b2572d5417117fdfa2a355e1ecd
-        <activity android:name=".MainActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-<<<<<<< HEAD
-
-
-=======
+        <activity android:name=".MainActivity" />
         <activity
             android:name="com.liuguangqiang.ipicker.IPickerActivity"
             android:screenOrientation="portrait"
             android:theme="@style/IPickerTheme" >
-
         </activity>
->>>>>>> f0652ac41fb20acaf43114b88593837131f7c8a1
-
->>>>>>> a8ac36ee20dd1b2572d5417117fdfa2a355e1ecd
     </application>
 
 </manifest>
