--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,145 +17,36 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-
         android:theme="@style/AppTheme" >
 
 
         <activity android:name=".IncreaseSort" > </activity>
-        <activity android:name=".TestActivity" >
 
-        </activity>
+        <activity android:name=".SortPageNext" ></activity>
 
-        <activity android:name=".SortPageNext" >
-
-=======
-<<<<<<< HEAD
->>>>>>> a9ac6ce98048a536626e0e027011e55c2afed4ed
-        android:theme="@style/AppTheme"
-        tools:replace="icon" >
         <activity android:name=".TestActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-<<<<<<< HEAD
         </activity>
-        <activity android:name=".IncreaseSort" >
-        </activity>
-=======
-=======
-<<<<<<< HEAD
 
-        android:theme="@style/AppTheme" >
-
-=======
-        android:theme="@style/AppTheme"
-        tools:replace="icon">
-        <activity android:name=".IncreaseSort">
-
->>>>>>> a8ac36ee20dd1b2572d5417117fdfa2a355e1ecd
->>>>>>> 78cbeff0e3e6caaf5a3f3eb06ac97f2081b89fa9
-        </activity>
->>>>>>> f0652ac41fb20acaf43114b88593837131f7c8a1
-
-<<<<<<< HEAD
         <activity android:name=".HotWordActivity" >
-
         </activity>
 
-        <activity android:name=".SortPage" ><intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter></activity>
+        <activity android:name=".SortPage" ></activity>
 
-=======
-        <activity android:name=".TestActivity" >
-
-        </activity>
-
-<<<<<<< HEAD
-        <activity android:name=".SortPage" />
->>>>>>> 78cbeff0e3e6caaf5a3f3eb06ac97f2081b89fa9
-
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login" />
-
-=======
-
-<<<<<<< HEAD
-
-
-
-
-
-
-=======
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login" />
-=======
->>>>>>> a9ac6ce98048a536626e0e027011e55c2afed4ed
-        <activity android:name=".SortPageNext" >
-        </activity>
-<<<<<<< HEAD
-        <activity android:name=".HotWordActivity" />
-        <activity android:name=".SortPage" />
-=======
->>>>>>> f0652ac41fb20acaf43114b88593837131f7c8a1
->>>>>>> a8ac36ee20dd1b2572d5417117fdfa2a355e1ecd
->>>>>>> 78cbeff0e3e6caaf5a3f3eb06ac97f2081b89fa9
-
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login" />
-
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
         <activity android:name=".MineActivity"></activity>
 
-=======
-<<<<<<< HEAD
->>>>>>> 78cbeff0e3e6caaf5a3f3eb06ac97f2081b89fa9
-
-        <activity android:name=".MineActivity" />
-
         <activity android:name=".MainActivity" ></activity>
-<<<<<<< HEAD
-=======
 
->>>>>>> 78cbeff0e3e6caaf5a3f3eb06ac97f2081b89fa9
-
-
-
-
-
-
-<<<<<<< HEAD
-
-
-=======
-=======
->>>>>>> a9ac6ce98048a536626e0e027011e55c2afed4ed
-        <activity android:name=".MineActivity" />
-        <activity android:name=".MainActivity" />
         <activity
             android:name="com.liuguangqiang.ipicker.IPickerActivity"
             android:screenOrientation="portrait"
             android:theme="@style/IPickerTheme" >
         </activity>
-<<<<<<< HEAD
-=======
->>>>>>> f0652ac41fb20acaf43114b88593837131f7c8a1
 
->>>>>>> a8ac36ee20dd1b2572d5417117fdfa2a355e1ecd
->>>>>>> 78cbeff0e3e6caaf5a3f3eb06ac97f2081b89fa9
->>>>>>> a9ac6ce98048a536626e0e027011e55c2afed4ed
     </application>
 
 </manifest>
