--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.myapplication" >
+    package="com.example.myapplication">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -17,36 +17,25 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-
-
-        <activity android:name=".IncreaseSort" > </activity>
-
-        <activity android:name=".SortPageNext" ></activity>
-
-        <activity android:name=".TestActivity" >
+        android:theme="@style/AppTheme">
+        <activity android:name=".check"></activity>
+        <activity android:name=".IncreaseSort"></activity>
+        <activity android:name=".SortPageNext" />
+        <activity android:name=".TestActivity"></activity>
+        <activity android:name=".HotWordActivity"></activity>
+        <activity android:name=".SortPage" />
+        <activity android:name=".MineActivity" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".HotWordActivity" >
-        </activity>
-
-        <activity android:name=".SortPage" ></activity>
-
-        <activity android:name=".MineActivity"></activity>
-
-        <activity android:name=".MainActivity" ></activity>
-
         <activity
             android:name="com.liuguangqiang.ipicker.IPickerActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/IPickerTheme" >
-        </activity>
-
+            android:theme="@style/IPickerTheme"></activity>
     </application>
 
 </manifest>
