--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,18 +18,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RegisterActivity"></activity>
+
+        <activity android:name=".RegisterActivity">
+        </activity>
+
+        <activity android:name=".check"></activity>
+
         <activity android:name=".IncreaseSort"></activity>
         <activity android:name=".SortPageNext" />
         <activity android:name=".TestActivity"></activity>
         <activity android:name=".HotWordActivity"></activity>
         <activity android:name=".SortPage" />
         <activity android:name=".MineActivity" />
+
         <activity android:name=".MainActivity" />
-        <activity
-            android:name="com.liuguangqiang.ipicker.IPickerActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/IPickerTheme"></activity>
+
         <activity android:name=".Login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,6 +40,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.liuguangqiang.ipicker.IPickerActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/IPickerTheme"></activity>
+
     </application>
 
 </manifest>
