--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,6 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-<<<<<<< HEAD
         android:theme="@style/AppTheme" >
 
 
@@ -26,72 +25,47 @@
         <activity android:name=".SortPageNext" ></activity>
 
         <activity android:name=".TestActivity" >
-=======
-        android:theme="@style/AppTheme">
-<<<<<<< HEAD
+
+        </activity>
         <activity android:name=".NewOne"></activity>
         <activity android:name=".check" />
-        <activity android:name=".IncreaseSort" />
-=======
 
         <activity android:name=".RegisterActivity">
         </activity>
 
-        <activity android:name=".check"></activity>
 
-        <activity android:name=".IncreaseSort"></activity>
->>>>>>> a7bfd2cff270d4e6c216b27a9de6df1183f5218a
-        <activity android:name=".SortPageNext" />
-        <activity android:name=".TestActivity" />
         <activity android:name=".HotWordActivity" />
         <activity android:name=".SortPage" />
         <activity android:name=".MineActivity" />
 
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity android:name=".Login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
->>>>>>> 6ad3048e1a187afdba56f3af1c61c756faca480d
 
-        </activity>
-<<<<<<< HEAD
-
-        <activity android:name=".HotWordActivity" >
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
-        <activity android:name=".SortPage" >
-            <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-        </activity>
-
-<<<<<<< HEAD
-        <activity
-            android:name="com.liuguangqiang.ipicker.IPickerActivity"
-            android:screenOrientation="portrait"
-<<<<<<< HEAD
-            android:theme="@style/IPickerTheme" />
-=======
-            android:theme="@style/IPickerTheme"></activity>
-
-=======
-        <activity android:name=".MineActivity"></activity>
-
-        <activity android:name=".MainActivity" ></activity>
 
         <activity
             android:name="com.liuguangqiang.ipicker.IPickerActivity"
             android:screenOrientation="portrait"
             android:theme="@style/IPickerTheme" >
+
         </activity>
 
-=======
->>>>>>> 6ad3048e1a187afdba56f3af1c61c756faca480d
->>>>>>> ef19971f6ae1b3e5b90ba680868c9842223e860a
->>>>>>> a7bfd2cff270d4e6c216b27a9de6df1183f5218a
+
+
+
     </application>
 
 </manifest>
