--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,61 +17,36 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-<<<<<<< HEAD
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.Design.NoActionBar" >
 
 
         <activity android:name=".IncreaseSort" > </activity>
 
-        <activity android:name=".SortPageNext" ></activity>
-
-        <activity android:name=".TestActivity" >
-=======
-        android:theme="@style/AppTheme">
 
         <activity android:name=".RegisterActivity">
         </activity>
 
         <activity android:name=".check"></activity>
 
-        <activity android:name=".IncreaseSort"></activity>
-        <activity android:name=".SortPageNext" />
         <activity android:name=".TestActivity"></activity>
         <activity android:name=".HotWordActivity"></activity>
-        <activity android:name=".SortPage" />
+
         <activity android:name=".MineActivity" />
 
         <activity android:name=".MainActivity" />
 
         <activity android:name=".Login.LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
->>>>>>> 6ad3048e1a187afdba56f3af1c61c756faca480d
-
-        </activity>
-<<<<<<< HEAD
-
-        <activity android:name=".HotWordActivity" >
         </activity>
 
         <activity android:name=".SortPage" >
             <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
-<<<<<<< HEAD
-        <activity
-            android:name="com.liuguangqiang.ipicker.IPickerActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/IPickerTheme"></activity>
 
-=======
-        <activity android:name=".MineActivity"></activity>
 
-        <activity android:name=".MainActivity" ></activity>
 
         <activity
             android:name="com.liuguangqiang.ipicker.IPickerActivity"
@@ -79,9 +54,7 @@
             android:theme="@style/IPickerTheme" >
         </activity>
 
-=======
->>>>>>> 6ad3048e1a187afdba56f3af1c61c756faca480d
->>>>>>> ef19971f6ae1b3e5b90ba680868c9842223e860a
+
     </application>
 
 </manifest>
